@@ -1,3 +1,10 @@
+2011-09-04 Charles Suprin <hamaa1vs at gmail.com>
+
+    * ChangeLog
+    * src/tle-update.c
+    Cleanup comments and code with satellite status updates.
+
+
 2011-09-01 Charles Suprin <hamaa1vs at gmail.com>
 
     * ChangeLog
